# WordleSolver

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  dictionary.h  frequency_by_position.cpp  main.cpp  small_wl.h
app/: CMakeLists.txt
app/cli/: main.cpp
data/: all_solutions.txt
include/: entropy.hpp  feedback.hpp  large_wl.h  small_wl.h  solver.hpp  wordle_solver.hpp
lib/: CMakeLists.txt
lib/include/: entropy.hpp  feedback.hpp  wordle_solver.h
lib/src/: wordle_solver.cpp
libWordleSolver/: CMakeLists.txt  README.md
libWordleSolver/include/: entropy.h  entropy.inl  feedback.h  wordle_solver.h
libWordleSolver/src/: feedback.cpp  wordle_solver.cpp
solver/: CMakeLists.txt
solver/constexpr_test/: CMakeLists.txt  Words.cpp  Words.hpp  main.cpp
solver/include/: data.h  entropy.hpp  feedback.hpp  wordle_solver.h
solver/src/: data_c.cpp  wordle_solver.cpp
src/: entropy.cpp  main.cpp  solver.cpp  wordle_solver.cpp
test/: .clang-tidy  CMakeLists.txt  test.cpp  test_solver.cpp
ui/: CMakeLists.txt
ui/cli/: cli.cpp
word_lists/: all_solutions.txt
wordle-solver/: CMakeLists.txt
